@@ -2,6 +2,7 @@ Revision history for DBIx::Class
 
 0.05999_05
         - Fixup to columns_info_for when database returns type(size)
+        - Made do_txn respect void context (on the off-chance somebody cares)
 
 0.05999_04
         - Fix for delete on full-table resultsets
